[gd_scene load_steps=2 format=2]

[ext_resource path="res://Levels/Level Resources/camera/camera.gd" type="Script" id=1]

[node name="camera" type="Camera2D"]
current = true
limit_left = 0
limit_top = 0
limit_right = 1000
limit_bottom = 1000
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 10.0
editor_draw_limits = true
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="tween" type="Tween" parent="."]

[node name="frequency" type="Timer" parent="."]

[node name="duration" type="Timer" parent="."]
one_shot = true

[node name="zoom_tween" type="Tween" parent="."]

[connection signal="timeout" from="frequency" to="." method="_on_frequency_timeout"]
[connection signal="timeout" from="duration" to="." method="_on_duration_timeout"]
